--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "joselfonseca/laravel-tactician": "^0.5.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "opis/events": "^5.0",
         "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
