--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "bensampo/laravel-enum": "^1.16",
         "fideloper/proxy": "^4.0",
         "joselfonseca/laravel-tactician": "^0.5.0",
         "laravel/framework": "5.7.*",
