--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
         "bensampo/laravel-enum": "^1.16",
         "fideloper/proxy": "^4.0",
         "joselfonseca/laravel-tactician": "^0.5.0",
+        "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "league/pipeline": "^1.0",
         "opis/events": "^5.0",
         "opis/string": "^1.5",
-        "prettus/l5-repository": "^2.6"
+        "prettus/l5-repository": "^2.6",
+        "spatie/laravel-schemaless-attributes": "^1.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -38,6 +40,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/App/Helpers/Utils.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
