--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "opis/events": "^5.0",
         "opis/string": "^1.5",
         "prettus/l5-repository": "^2.6",
+        "spatie/laravel-model-status": "^1.6",
         "spatie/laravel-schemaless-attributes": "^1.3"
     },
     "require-dev": {
