--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "bensampo/laravel-enum": "^1.16",
         "fideloper/proxy": "^4.0",
+        "globelabs/globe-connect-php": "dev-master",
         "joselfonseca/laravel-tactician": "^0.5.0",
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.7.*",
@@ -19,6 +20,7 @@
         "opis/events": "^5.0",
         "opis/string": "^1.5",
         "prettus/l5-repository": "^2.6",
+        "propaganistas/laravel-phone": "^4.1",
         "spatie/laravel-model-status": "^1.6",
         "spatie/laravel-schemaless-attributes": "^1.3"
     },
