--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "prettus/l5-repository": "^2.6",
         "propaganistas/laravel-phone": "^4.1",
         "spatie/laravel-model-status": "^1.6",
-        "spatie/laravel-schemaless-attributes": "^1.3"
+        "spatie/laravel-schemaless-attributes": "^1.3",
+        "spatie/once": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
