--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/pipeline": "^1.0",
         "opis/events": "^5.0",
         "opis/string": "^1.5",
+        "predis/predis": "^1.1",
         "prettus/l5-repository": "^2.6",
         "propaganistas/laravel-phone": "^4.1",
         "spatie/laravel-model-status": "^1.6",
