--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "propaganistas/laravel-phone": "^4.1",
         "spatie/laravel-model-status": "^1.6",
         "spatie/laravel-schemaless-attributes": "^1.3",
-        "spatie/once": "^2.0"
+        "spatie/once": "^2.0",
+        "spatie/string": "^2.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
