--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,11 @@
         "spatie/laravel-model-status": "^1.6",
         "spatie/laravel-schemaless-attributes": "^1.3",
         "spatie/once": "^2.0",
-        "spatie/string": "^2.2"
+        "spatie/string": "^2.2",
+        "telerivet/telerivet-php-client": "^1.1"
     },
     "require-dev": {
+        "ajthinking/tinx": "^2.1",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
@@ -55,7 +57,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "vendor/telerivet/telerivet-php-client/telerivet.php"
         ]
     },
     "autoload-dev": {
