--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "algolia/algoliasearch-client-php": "^2.2",
         "bensampo/laravel-enum": "^1.16",
         "fideloper/proxy": "^4.0",
         "globelabs/globe-connect-php": "dev-master",
@@ -16,6 +17,7 @@
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^2.0",
+        "laravel/scout": "^7.0",
         "laravel/tinker": "^1.0",
         "league/pipeline": "^1.0",
         "opis/events": "^5.0",
