--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/scout": "^7.0",
         "laravel/tinker": "^1.0",
         "league/pipeline": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "opis/events": "^5.0",
         "opis/string": "^1.5",
         "predis/predis": "^1.1",
