--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "bensampo/laravel-enum": "^1.16",
         "fideloper/proxy": "^4.0",
         "globelabs/globe-connect-php": "dev-master",
+        "guzzlehttp/guzzle": "^6.3",
         "joselfonseca/laravel-tactician": "^0.5.0",
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.8.*",
